# main

./: .clang  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
fmt/: CMakeLists.txt
fmt/src/: fmt.cc
src/: main.cpp
